Fixed artf1500916: Allocate version - UI issue Version list: Fixed an issue with icon wrapping when scrollbar appears Fixed the synchronization tool to encompass more files

--- a/Modules/Versions/module.css
+++ b/Modules/Versions/module.css
@@ -7,6 +7,17 @@
     padding: 0 !important;
 }
 
+.ConfirmationWindow
+{
+    width: 200px;
+    height:75px;
+}
+
+.VersionCentered
+{
+    text-align:center;
+}
+
 .versionUploadBody {
     font-family: Arial,verdana,Serif;
     font-size: 12px;
